fixed navbar jump

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -64,6 +64,7 @@ nav {
   justify-content: center;
 }
 
+
 .navlinks {
   color: white;
   font-size: 1.2em;
@@ -77,9 +78,10 @@ nav {
   background-color: #333333;
   color: #f5f5f5;
   border-radius: 10px;
-  height: 65px;
+  
 
 }
+
 
 ul {
   list-style-type: none;
